Large refactoring of the Web interface
