# pkg/docs/swagger.json
@@ -363,22 +363,6 @@
                 }
             }
         },
-        "api.Category": {
-            "type": "object",
-            "properties": {
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "api.Language": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "string"
-                }
-            }
-        },
         "api.Publication": {
             "type": "object",
             "properties": {
@@ -386,12 +370,6 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/api.Author"
-                    }
-                },
-                "category": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/api.Category"
                     }
                 },
                 "cover_url": {
@@ -402,12 +380,6 @@
                 },
                 "description": {
                     "type": "string"
-                },
-                "language": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/api.Language"
-                    }
                 },
                 "publisher": {
                     "type": "array",
